--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-paths",
   "version": "0.0.1",
   "description": "Just a basic module to get the base path to the lib, config or other paths for a typical node app",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +14,8 @@
     "config"
   ],
   "author": "Harry Guillermo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^3.9.3"
+  }
 }
