--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "config"
   ],
   "author": "Harry Guillermo",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "lodash": "^3.9.3"
   }
